--- a/app/css/modal.css
+++ b/app/css/modal.css
@@ -1,6 +1,6 @@
 .overlay {
 	position: fixed;
-	display: flex;
+	display: none;
 	z-index: 5;
 	top: 0;
 	left: 0;
@@ -17,7 +17,7 @@
 	left: 0;
 	opacity: 1 !important;
 	background-color: white;
-	@apply shadow-sm opacity-100;
+	@apply shadow-sm;
 }
 .overlay .btn {
 	padding: 0.5rem 0.7rem;
